manual merge for bug_29136, bug#29309.